--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
