--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.64.2",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
